# 42ctl

./: .dockerignore  .gitignore  Cargo.toml  DECISIONS.md  Dockerfile  README.md  RUNBOOK.md  SECURITY.md  build.rs  deny.toml
.github/workflows/: ci.yml  docker.yml  publish.yml  release.yml  sign-release.yml
deploy/: Dockerfile.dist
docs/: RELEASE-DOD.md
scripts/: release-dryrun.sh
scripts/verify/: v10-secret-sync.sh  v11-notes.sh  v12-merge.sh  v13-github-cli.sh
src/: cli.rs  main.rs  profile.rs  ui.rs
src/adapters/: address.rs  api.rs  authority.rs  compose.rs  creds.rs  decrypt.rs  derive.rs  escrow.rs  github_device.rs  github_org.rs  keystore.rs  mod.rs  otp.rs  passphrase.rs  rbac.rs  scope.rs  scope_env_grpc.rs  scope_grpc.rs  session.rs
src/adapters/rbac/: env.rs  grant.rs  group.rs  invite.rs  org.rs  pubkey.rs  team.rs
src/cmd/: auth.rs  config.rs  db.rs  env.rs  group.rs  invite.rs  keys.rs  mod.rs  notes.rs  org.rs  project.rs  scope.rs  scope_init.rs  scope_pubkey.rs  scope_recover.rs  scope_rotate.rs  scope_secret.rs  scope_secret_reseal.rs  scope_status.rs  scope_sync.rs  scope_wrap.rs  sync.rs  team.rs  team_members.rs  unseal.rs  update.rs  vault.rs  version.rs
src/core/: manifest.rs  materialize.rs  merge.rs  mod.rs  project.rs  projpath.rs  syncstate.rs
src/ops/: audit.rs  io.rs  manage.rs  mod.rs  notes.rs  reconcile.rs  secret.rs  share.rs  sync.rs
