[package]
name = "c42"
version = "0.1.0"
edition = "2021"
rust-version = "1.91"
description = "42ctl — the umbrella platform CLI for the 42 stack (grobase + vault42)"
license = "AGPL-3.0-only"
repository = "https://github.com/Univers42/42ctl"

# The crate is `c42` (crates.io names can't lead with a digit) but the command is `42ctl`.
[[bin]]
name = "42ctl"
path = "src/main.rs"

# 42ctl decrypts plaintext locally, so it never writes `unsafe` of its own.
[lints.rust]
unsafe_code = "forbid"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
# Zero-knowledge crypto (the future `vault-crypto`) + the contracts gRPC client — pinned
# git deps on the public vault42 repo, never copied (DECISIONS D1).
vault42-core = { git = "https://github.com/Univers42/vault42", tag = "v0.1.2" }
vault42-proto = { git = "https://github.com/Univers42/vault42", tag = "v0.1.2" }
tonic = { version = "0.12", features = ["tls", "tls-roots"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
zeroize = { version = "1", features = ["derive"] }
hex = "0.4"
base64 = "0.22"
uuid = { version = "1", features = ["v5"] }
rpassword = "7"

[profile.release]
strip = true
lto = "thin"
