[package]
name = "c42"
version = "0.1.0"
edition = "2021"
rust-version = "1.91"
description = "42ctl — the umbrella platform CLI for the 42 stack (grobase + vault42)"
license = "AGPL-3.0-only"
repository = "https://github.com/Univers42/42ctl"
homepage = "https://github.com/Univers42/42ctl"

# The crate is `c42` (crates.io names can't lead with a digit) but the command is `42ctl`.
[[bin]]
name = "42ctl"
path = "src/main.rs"

# 42ctl decrypts plaintext locally, so it never writes `unsafe` of its own.
[lints.rust]
unsafe_code = "forbid"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
# Zero-knowledge crypto (the future `vault-crypto`) + the contracts gRPC client — pinned
# git deps on the public vault42 repo, never copied (DECISIONS D1).
vault42-core = { git = "https://github.com/Univers42/vault42", tag = "v0.2.0" }
vault42-proto = { git = "https://github.com/Univers42/vault42", tag = "v0.2.0" }
tonic = { version = "0.12", features = ["tls", "tls-roots"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
zeroize = { version = "1", features = ["derive"] }
hex = "0.4"
base64 = "0.22"
uuid = { version = "1", features = ["v5"] }
rpassword = "7"
# Self-update engine — reads the cargo-dist install receipt, verifies the
# release artifact's checksum from the signed dist-manifest, and only then
# swaps the running binary (verify-before-swap, P7).
axoupdater = { version = "0.9", features = ["blocking"] }

[profile.release]
strip = true
lto = "thin"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.28.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell", "npm", "homebrew"]
# Target platforms to build apps for (Rust target-triple syntax).
# v1 drops Apple/macOS (Increment 3 amendment): Linux x86_64/aarch64 × {gnu,musl} + Windows.
targets = ["x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl", "aarch64-unknown-linux-gnu", "aarch64-unknown-linux-musl", "x86_64-pc-windows-msvc"]
# A namespace to use when publishing this package to the npm registry
npm-scope = "@universe42"
# A GitHub repo to push Homebrew formulas to
tap = "Univers42/homebrew-tap"
# cargo-dist's homebrew job pushes the formula to `tap` via the HOMEBREW_TAP_TOKEN secret
# (un-gated, per D8 — the tap push is low-stakes vs npm and reversible by force-push).
# The npm package is published by our OWN gated publish.yml (protected `publish` env +
# `npm publish --provenance`), so "npm" stays OUT of publish-jobs even though its installer
# artifact is generated.
publish-jobs = ["homebrew"]
# Checksums to generate for each App
checksum = "sha256"
# Whether to enable GitHub Attestations
github-attestations = true
# Whether to install an updater program
install-updater = true
# Which actions to run on pull requests
pr-run-mode = "plan"
# Path that installers should place binaries in
install-path = "CARGO_HOME"

# GitHub retired the ubuntu-20.04 hosted runner, but cargo-dist 0.28 still emits it for the
# global + Linux jobs (which then queue forever). Pin those to a current image; the Windows
# target keeps its still-valid default. (macOS targets were dropped in Increment 3.)
[workspace.metadata.dist.github-custom-runners]
global = "ubuntu-22.04"
x86_64-unknown-linux-gnu = "ubuntu-22.04"
x86_64-unknown-linux-musl = "ubuntu-22.04"
aarch64-unknown-linux-gnu = "ubuntu-22.04"
aarch64-unknown-linux-musl = "ubuntu-22.04"
x86_64-pc-windows-msvc = "windows-2022"
